--- a/manifests/app-deploy.yaml
+++ b/manifests/app-deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: node-app
-          image: yash5090/node-app # Replace with the actual image tag
+          image: yash5090/node-app:latest # Replace with the actual image tag
           ports:
             - containerPort: 8000 # Replace with the port your Tetris game listens on
